i love you bish

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-video-tag": "0.0.10",
     "sass": "^1.57.1",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
