--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install --force
 
       - name: Build React App
-        run: npm run build
+        run: CI=false npm run build
 
       - name: Deploy to GitHub Pages
         run: |
