--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           git config --global user.email "brench1999@gmail.com"
           git config --global user.name "bfrench1999"
           git remote add origin_with_token https://bfrench1999:$GH_TOKEN@github.com/bfrench1999/portfolio-2.git
-          npm run deployy  
+          npm run deploy
         env:
           CI: false
           GH_TOKEN: ${{secrets.GH_TOKEN}}
